[#8391] fix(docs): Fix error in documents about how to use bundle jars for Azure Blob Storage and GCS (#8392)
### What changes were proposed in this pull request?

Add more details and fix errors about how to use PySpark to access Azure
Blob Storage and GCS via GVFS

### Why are the changes needed?

For better user experience.

Fix: #8391 

### Does this PR introduce _any_ user-facing change?

N/A.

### How was this patch tested?

Test locally.